采用新的ScrollViewer实现更顺滑的滚动效果

--- a/SmartLibrary/App.xaml
+++ b/SmartLibrary/App.xaml
@@ -14,6 +14,7 @@
                 <ui:ControlsDictionary />
                 <ResourceDictionary Source="/Shared;Component/Style/MyButton.xaml" />
                 <ResourceDictionary Source="/Shared;Component/Style/SelectableTextBlock.xaml" />
+                <ResourceDictionary Source="/Shared;Component/Style/MyScrollBar.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
