--- a/SmartManager/App.xaml
+++ b/SmartManager/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="/Shared;Component/Style/MyButton.xaml" />
                 <ResourceDictionary Source="/Shared;Component/Style/MyCheckBox.xaml" />
                 <ResourceDictionary Source="/Shared;Component/Style/SelectableTextBlock.xaml" />
+                <ResourceDictionary Source="/Shared;Component/Style/MyScrollBar.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:StringToImageSourceConverter x:Key="StringToImageSourceConverter" />
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
