--- a/SmartManager/Views/Pages/Settings.xaml
+++ b/SmartManager/Views/Pages/Settings.xaml
@@ -8,6 +8,7 @@
     xmlns:local="clr-namespace:SmartManager.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="Settings"
     d:DataContext="{d:DesignInstance local:Settings,
                                      IsDesignTimeCreatable=False}"
@@ -52,11 +53,7 @@
     </Page.Resources>
 
     <Grid Margin="16,16,4,16">
-        <ScrollViewer
-            extensions:ScrollAnimationBehavior.IsEnabled="True"
-            extensions:ScrollAnimationBehavior.PointsToScroll="16"
-            extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
-            extensions:TouchableScrollViewer.IsEnabled="True">
+        <ws:ScrollViewer ws:StylusTouchDevice.Simulate="True" PanningMode="Both">
             <StackPanel MaxWidth="1180" Margin="0,0,12,0">
                 <ui:TextBlock
                     Margin="0,12,0,0"
@@ -457,6 +454,6 @@
                     </StackPanel>
                 </ui:CardExpander>
             </StackPanel>
-        </ScrollViewer>
+        </ws:ScrollViewer>
     </Grid>
 </Page>
