--- a/SmartLibrary/Views/Pages/Bookshelf.xaml
+++ b/SmartLibrary/Views/Pages/Bookshelf.xaml
@@ -11,6 +11,7 @@
     xmlns:sharedConverters="clr-namespace:Shared.Converters;assembly=Shared"
     xmlns:sharedExtensions="clr-namespace:Shared.Extensions;assembly=Shared"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="Bookshelf"
     d:DataContext="{d:DesignInstance local:Bookshelf,
                                      IsDesignTimeCreatable=False}"
@@ -84,12 +85,9 @@
             ItemsSource="{Binding ViewModel.BookListItems, Mode=OneWay}">
             <ItemsControl.Template>
                 <ControlTemplate TargetType="ItemsControl">
-                    <ScrollViewer
-                        sharedExtensions:ScrollAnimationBehavior.IsEnabled="True"
-                        sharedExtensions:ScrollAnimationBehavior.PointsToScroll="16"
-                        sharedExtensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
+                    <ws:ScrollViewer ws:StylusTouchDevice.Simulate="True" PanningMode="Both">
                         <ItemsPresenter Margin="-12,0,16,0" />
-                    </ScrollViewer>
+                    </ws:ScrollViewer>
                 </ControlTemplate>
             </ItemsControl.Template>
             <ItemsControl.ItemTemplate>
@@ -170,7 +168,7 @@
                 <ItemsPanelTemplate>
                     <ui:VirtualizingWrapPanel
                         IsItemsHost="True"
-                        ItemSize="358,185"
+                        ItemSize="357,185"
                         Orientation="Vertical"
                         SpacingMode="Uniform"
                         StretchItems="True" />
