--- a/SmartLibrary/Views/Pages/EditBook.xaml
+++ b/SmartLibrary/Views/Pages/EditBook.xaml
@@ -8,6 +8,7 @@
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="EditBook"
     d:DataContext="{d:DesignInstance local:EditBook,
                                      IsDesignTimeCreatable=False}"
@@ -82,12 +83,10 @@
                                 IsEnabled="{Binding ViewModel.IsPictureLoading, Converter={StaticResource InverseBooleanConverter}, Mode=OneWay}" />
                         </Grid>
                     </Grid>
-                    <ScrollViewer
+                    <ws:ScrollViewer
                         Grid.Row="1"
-                        extensions:ScrollAnimationBehavior.IsEnabled="True"
-                        extensions:ScrollAnimationBehavior.PointsToScroll="16"
-                        extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
-                        extensions:TouchableScrollViewer.IsEnabled="True">
+                        ws:StylusTouchDevice.Simulate="True"
+                        PanningMode="Both">
                         <Grid
                             Margin="32,16,32,0"
                             HorizontalAlignment="Center"
@@ -124,7 +123,7 @@
                                 TextAlignment="Center"
                                 TextWrapping="Wrap" />
                         </Grid>
-                    </ScrollViewer>
+                    </ws:ScrollViewer>
                     <Grid
                         Grid.Row="2"
                         Margin="16"
@@ -152,13 +151,11 @@
                     </Grid>
                 </Grid>
             </Border>
-            <ScrollViewer
+            <ws:ScrollViewer
                 Grid.Column="1"
                 Margin="8,0,0,0"
-                extensions:ScrollAnimationBehavior.IsEnabled="True"
-                extensions:ScrollAnimationBehavior.PointsToScroll="16"
-                extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
-                extensions:TouchableScrollViewer.IsEnabled="True">
+                ws:StylusTouchDevice.Simulate="True"
+                PanningMode="Both">
                 <StackPanel Margin="0,0,12,0">
                     <ui:CardExpander IsExpanded="True">
                         <ui:CardExpander.Header>
@@ -445,7 +442,7 @@
                         </ui:CardExpander.Content>
                     </ui:CardExpander>
                 </StackPanel>
-            </ScrollViewer>
+            </ws:ScrollViewer>
         </Grid>
     </Grid>
 </Page>
