--- a/SmartManager/Views/Pages/AddFace.xaml
+++ b/SmartManager/Views/Pages/AddFace.xaml
@@ -9,6 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:SmartManager.Models"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:ws="https://schemas.elecho.dev/wpfsuite"
     Title="AddFace"
     d:DataContext="{d:DesignInstance local:AddFace,
                                      IsDesignTimeCreatable=False}"
@@ -76,13 +77,11 @@
                     </ui:ListView>
                 </Border>
             </Grid>
-            <ScrollViewer
+            <ws:ScrollViewer
                 Grid.Column="1"
                 Margin="8,0,0,0"
-                extensions:ScrollAnimationBehavior.IsEnabled="True"
-                extensions:ScrollAnimationBehavior.PointsToScroll="16"
-                extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20"
-                extensions:TouchableScrollViewer.IsEnabled="True">
+                ws:StylusTouchDevice.Simulate="True"
+                PanningMode="Both">
                 <StackPanel Margin="0,0,12,0">
                     <ui:CardExpander IsExpanded="True">
                         <ui:CardExpander.Header>
@@ -217,7 +216,7 @@
                         </ui:CardExpander.Content>
                     </ui:CardExpander>
                 </StackPanel>
-            </ScrollViewer>
+            </ws:ScrollViewer>
         </Grid>
         <Grid Grid.Column="1" Width="180">
             <Grid.RowDefinitions>
