--- a/SmartManager/Views/Pages/Settings.xaml
+++ b/SmartManager/Views/Pages/Settings.xaml
@@ -53,7 +53,7 @@
     </Page.Resources>
 
     <Grid Margin="16,16,4,16">
-        <ws:ScrollViewer ws:StylusTouchDevice.Simulate="True" PanningMode="Both">
+        <ws:ScrollViewer ws:StylusTouchDevice.Simulate="True" PanningMode="VerticalOnly">
             <StackPanel MaxWidth="1180" Margin="0,0,12,0">
                 <ui:TextBlock
                     Margin="0,12,0,0"
